[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Naves/Player/player_orange.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Juego/Naves/Player/MaterialFisico.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Proyectiles/Laser/LaserBeam2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Naves/Player/Estela/Trail2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Naves/Player/Motor/MotorSFX.tscn" type="PackedScene" id=7]
[ext_resource path="res://Juego/Naves/Player/sonido_danio_player.wav" type="AudioStream" id=8]
[ext_resource path="res://Juego/Naves/Player/Escudo/Escudo.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 38.0132

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="RigidBody2D"]
z_index = 50
z_as_relative = false
collision_mask = 22
physics_material_override = ExtResource( 3 )
gravity_scale = 0.0
can_sleep = false
linear_damp = 1.0
angular_damp = 4.0
script = ExtResource( 2 )
potencia_rotacion = 50

[node name="LaserBeam2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( 5, 0 )

[node name="PuntoIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, -47 )

[node name="PuntoDerecho" parent="Canion" index="1"]
position = Vector2( 0, 47 )

[node name="EstelaPuntoInicio" type="Position2D" parent="."]
position = Vector2( -13, 0 )

[node name="Trail2D" parent="EstelaPuntoInicio" instance=ExtResource( 6 )]
position = Vector2( -5, 0 )
points = PoolVector2Array( 0, 0, 50, 0 )
width = 80.0
is_emitting = true
lifetime = 0.6
max_points = 150
target_path = NodePath("..")

[node name="MotorSFX" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/RESET = SubResource( 2 )
anims/default = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Escudo" parent="." instance=ExtResource( 9 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Canion"]
